# pyexamgen

./: .gitignore  MANIFEST.in  peg  pyproject.toml  setup.py  setup_template.py
example/: 2024_01_10_digital_circuits.json  2025_01_10_digital_circuits.json  local_includes.tex
example/task1/: task.tex  task.typ
example/task2/: task.tex  task.typ
example/task3/: task.tex  task.typ
example/title/: task.tex  task.typ
pyexamgen/: ExamRenderer.py  RendererHelper.py  __init__.py  __main__.py
pyexamgen/templates/de-DE/: base.tex
src/pyexamgen/: ExamRenderer.py  PRNG.py  RendererHelper.py  __init__.py  __main__.py
src/pyexamgen/templates/de-DE/: base.typ  common.typ
